Fixed some minor display bugs on mobile

--- a/frontend/css/mobile.css
+++ b/frontend/css/mobile.css
@@ -20,15 +20,15 @@ h2 {
 }
 
 h4 {
-    font-size: 1.2em;
+    font-size: 1.4em;
 }
 
 h5 {
-    font-size: 1em;
+    font-size: 1.2em;
 }
 
 p {
-    font-size: 0.8em;
+    font-size: 1em;
 }
 
 td {
